Completed writing exercises for agents as programs

--- a/solutions/04.1-agents-as-programs.md
+++ b/solutions/04.1-agents-as-programs.md
@@ -27,8 +27,7 @@ viz(dist)
 In this model, we flip 3 coins. Use `factor` to favor an outcome of 2 heads and 1 tails:
 
 ~~~~
-var softHeads = Infer({ 
-  model() {
+var softHeads = Infer({}, function() {
     var a = flip(0.5);
     var b = flip(0.5);
     var c = flip(0.5);
@@ -49,16 +48,16 @@ The ultimatum game requires two players: A proposer and a responder. The propose
 If the responder was a strict utilitarian, s/he would accept any offer of $1 or more. Assume the proposer is a soft maximizer who wants to keep as much of the $10 as possible. Complete the code below to find out how much the proposer will offer:
 
 ~~~~
-
 var responder = function(offer) {    
     
-    // your code here
+    return (offer>0 ? true : false);
     
 }
 
 var proposer = Infer({method: "enumerate"}, function(){
 	
-	// your code here
+	var offer = uniformDraw([0,1,2,3,4,5,6,7,8,9,10]);
+	var reward = responder(offer) ? (10 - offer) : 0;
 	
 	factor(reward)
 	return(offer)	
@@ -72,17 +71,15 @@ viz(proposer);
 People, it turns out, act very differently than the model above suggests. Responders will often reject low offers as "unfair", even though this means they get nothing. Assume that the responder decides whether to accept in proportion to the percentage of the $10 allocated to her, raised to some power `alpha` (you can think of `alpha` as "spitefulness"). Complete the code below to determine how much the proposer should offer:
 
 ~~~~
-
 var responder = function(offer, alpha) {    
 	var alpha = 2
-   var p = Math.pow(offer/10,alpha)
+    var p = Math.pow(offer/10,alpha)
 	return(flip(p));
 }
 
 var proposer = Infer({method: "enumerate"}, function(){
-	
-	// your code here
-	
+	var offer = uniformDraw([0,1,2,3,4,5,6,7,8,9,10]);
+	var reward = responder(offer,alpha) ? (10 - offer) : 0;
 	factor(reward)
 	return(offer)	
 	})
@@ -90,36 +87,37 @@ var proposer = Infer({method: "enumerate"}, function(){
 viz(proposer);
 ~~~~
 
-### c)
+### c) 
 
 You can think of the variable `alpha` in the code above as encoding spitefulness: the degree to which the responder is willing to forego a reward in order to prevent the proposer from having a reward. See how setting `alpha` to 4, 6, 10, 25, and 50 affects what the proposer does. Explain the results. 
 
 ### d)
 
-
-The models above assume the proposer knows the responder's decision function. Let's soften that assumption: the proposer knows that the responder's value of `alpha` is somewhere on the range [0.5, 5]. Suppose the proposer offer $2 and the responder rejects it. What is the most likely level of `alpha`? How does that change if the first offer was $8?
+The models above assume the proposer knows the responder's decision function. Let's soften that assumption: the proposer knows that the responder's value of `alpha` is somewhere on the range [0.5, 5]. Suppose the proposer offered $2 and the responder rejects it. What is the most likely level of `alpha`?
 
 (Hint: you may find it helpful to find a different place for `alpha` than within the definition of `responder`.)
 
 ~~~~
 var responder = function(offer, alpha) {    
-
-	// your code here
-
+    var p = Math.pow(offer/10,alpha)
+    return(flip(p));
 }
 
 var proposer = Infer({method: "MCMC", samples:50000}, function(){
-
-	// your code here
-
-]})
+    var alpha = uniform(0.5,5)
+    //var offer = uniformDraw([0,1,2,3,4,5,6,7,8,9,10]);
+    var offer = 1;
+    var reward = responder(offer, alpha) ? (10 - offer) : 0;
+    condition(reward==0)
+    return(alpha)   
+})
 
 viz(proposer)
 ~~~~
 
 ### e)
 
-Extend the model in (d) as follows: Suppose the proposer and responder are going to play 
+Again, suppose the proposer offered $2 and the responder rejected it. Suppose they are going to play a second round. How much should the proposer offer? How does this change if the first (rejected) offer was $8?
 
 ## Exercise 3: The Prisoner's Dilemma
 
@@ -133,13 +131,18 @@ var thiefRats = function(){
 }
 
 var thief = Infer({}, function(){
-
-	// your code here
-
+  var otherThiefRats = thiefRats();
+  var IRat = thiefRats();
+  var years = (otherThiefRats? 
+              (IRat? 4 : 10) : 
+              (IRat? 4 : 0));
+  factor((10-years)/10)
+  return(IRat)
 })
 
 viz(thief)
 ~~~~
+
 
 ## Exercise 4: Exploring RSA
 
