fixed exercise 2e in 04.1

--- a/exercises/04.1-agents-as-programs.md
+++ b/exercises/04.1-agents-as-programs.md
@@ -119,7 +119,7 @@ viz(proposer)
 
 ### e)
 
-Extend the model in (d) as follows: Suppose the proposer and responder are going to play 
+Extend the model in (d) as follows: Suppose the proposer and responder are going to play twice. Does it ever make sense for the responder to reject the first proposal in order to increase the total expected payoff across the two games? (If you cannot figure out how to write the model, a verbal description is OK.) 
 
 ## Exercise 3: The Prisoner's Dilemma
 
