finished writing sequential decisions chapter. wrote reading selection for that chapter as well.

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -9,6 +9,17 @@
 
 
 
+@article{kaelbling1998planning,
+  title={Planning and acting in partially observable stochastic domains},
+  author={Kaelbling, Leslie Pack and Littman, Michael L and Cassandra, Anthony R},
+  journal={Artificial intelligence},
+  volume={101},
+  number={1},
+  pages={99--134},
+  year={1998},
+  publisher={Elsevier}
+}
+
 @book{Marr1982,
 	Author = {David Marr},
 	Date-Added = {2016-09-22 17:50:09 +0000},
@@ -288,6 +299,18 @@
 	Volume = {7},
 	Year = {2012}}
 
+@article{carlson2013theory,
+  title={Theory of mind},
+  author={Carlson, Stephanie M and Koenig, Melissa A and Harms, Madeline B},
+  journal={Wiley Interdisciplinary Reviews: Cognitive Science},
+  volume={4},
+  number={4},
+  pages={391--402},
+  year={2013},
+  URL = {http://onlinelibrary.wiley.com/doi/full/10.1002/wcs.1232},
+  publisher={Wiley Online Library}
+}
+
 @article{Baker:2009ti,
 	Author = {Baker, Chris L and Saxe, Rebecca and Tenenbaum, Joshua B},
 	Journal = {Cognition},
@@ -295,6 +318,7 @@
 	Pages = {329--349},
 	Title = {Action understanding as inverse planning},
 	Volume = {113},
+	Url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.154.2977&rep=rep1&type=pdf},
 	Year = {2009}}
 
 @article{Kushnir:2010wx,
