Apparently parse-bibtex doesn't work within a bulleted list

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -7,7 +7,16 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
+@article{carlson:2013theory,
+  Title={Theory of mind},
+  Author={Carlson, Stephanie M and Koenig, Melissa A and Harms, Madeline B},
+  Journal={Wiley Interdisciplinary Reviews: Cognitive Science},
+  Volume={4},
+  Number={4},
+  Pages={391--402},
+  Year={2013},
+  Url = {http://onlinelibrary.wiley.com/doi/full/10.1002/wcs.1232},
+  Publisher={Wiley Online Library}}
 
 @article{kaelbling1998planning,
   title={Planning and acting in partially observable stochastic domains},
@@ -298,18 +307,6 @@
 	Title = {Learning From Others: The Consequences of Psychological Reasoning for Human Learning},
 	Volume = {7},
 	Year = {2012}}
-
-@article{carlson2013theory,
-  title={Theory of mind},
-  author={Carlson, Stephanie M and Koenig, Melissa A and Harms, Madeline B},
-  journal={Wiley Interdisciplinary Reviews: Cognitive Science},
-  volume={4},
-  number={4},
-  pages={391--402},
-  year={2013},
-  URL = {http://onlinelibrary.wiley.com/doi/full/10.1002/wcs.1232},
-  publisher={Wiley Online Library}
-}
 
 @article{Baker:2009ti,
 	Author = {Baker, Chris L and Saxe, Rebecca and Tenenbaum, Joshua B},
