--- a/readings/05.1-sequential-decisions.md
+++ b/readings/05.1-sequential-decisions.md
@@ -6,7 +6,7 @@ description: "MDPs and POMDPs"
 
 ## 1. Inverse planning with MDPs.
 
-Read @Baker:2009ti, an early and influential example of using MDPs to model human reasoning about agents' intentions. 
+Read @Baker:2009ti, an early and influential example of using MDPs to model human reasoning about agents' intentions.
 
 #### Reading questions:
 a) We've seen models that do reasoning about an agent's goals before. What do POMDPs allow us to do that we couldn't do before?
@@ -17,4 +17,4 @@ c) How does this model incorporate the notion of a [Theory of Mind](https://en.w
 
 ## Extras
 
-* **Theory of Mind**. For more on Theory of Mind, see @carlson2013theory.
+**Theory of Mind**. For more on Theory of Mind, see @carlson:2013theory.
