--- a/exercises/05.1-sequential-decisions.md
+++ b/exercises/05.1-sequential-decisions.md
@@ -87,15 +87,80 @@ Change the agent's utility function such that the agent moves as far as possible
 
 ## Exercise 2
 
-FUBAR
+Consider this "line-world" involving a cookie shop and a donut shop:
 
->**Exercise:**
+~~~~
+var ___ = ' '; 
+var D = { name: 'Donut' };
+var C = { name: 'Cookie' };
 
->1. Keeping `transitionNoiseProbability=0.1`, find settings for `utilityTable` such that the agent goes "right" instead of "up".
->2. Set `transitionNoiseProbability=0.01`. Change a single parameter in `utilityTable` such that the agent goes "right" (there are multiple ways to do this).
-<!-- put up timeCost to -1 or so -->
+var grid = [
+  [C, '___', '___', '___', '___', '___', D]
+];
 
->**Exercise:** Use the codebox below to explore different levels of softmax noise. Find a setting of `utilityTable` and `alpha` such that the agent goes to West and East equally often and nearly always takes the most direct route to both East and West. Included below is code for simulating many trajectories and returning the trajectory length. You can extend this code to measure whether the route taken by the agent is direct or not. (Note that while the softmax agent here is able to "backtrack" or return to its previous location, in later Gridworld examples we disalllow backtracking as a possible action).
+var mdp = makeGridWorldMDP({ grid, start: [3, 0] });
+
+var transition = function(state, action) {
+  return state + action;
+};
+
+var utility = function(state) {
+  if (state === 3) {
+    return 1;
+  } else {
+    return 0;
+  }
+};
+
+var makeAgent = function() { 
+  var act = function(state, timeLeft) {
+    return Infer({ model() {
+      var action = uniformDraw([-1, 0, 1]);
+      var eu = expectedUtility(state, action, timeLeft);
+      factor(100 * eu);
+      return action;
+    }});
+  };
+
+  var expectedUtility = function(state, action, timeLeft) {
+    var u = utility(state, action);
+    var newTimeLeft = timeLeft - 1;
+    if (newTimeLeft === 0) {
+      return u; 
+    } else {
+      return u + expectation(Infer({ model() {
+        var nextState = transition(state, action); 
+        var nextAction = sample(act(nextState, newTimeLeft));
+        return expectedUtility(nextState, nextAction, newTimeLeft);
+      }}));
+    }
+  };
+
+  return { act };
+}
+
+var act = makeAgent().act;
+
+var simulate = function(state, timeLeft){
+  if (timeLeft === 0){
+    return [];
+  } else {
+    var action = sample(act(state, timeLeft));
+    var nextState = transition(state, action); 
+    return [state].concat(simulate(nextState, timeLeft - 1))
+  }
+};
+
+var startState = 0;
+var totalTime = 5;
+~~~~
+
+Bob starts out in between the donut shop and the cookie shop. Assume you observe Bob go to the donut shop in 3 time steps. Edit the code above to write a model to *infer* Bob's utility function for cookies and donuts. Use any reasonable prior. 
+
+
+## Exercise 3
+
+Use the codebox below to explore different levels of softmax noise. Find a setting of `utilityTable` and `alpha` such that the agent goes to West and East equally often and nearly always takes the most direct route to both East and West. Included below is code for simulating many trajectories and returning the trajectory length. You may find it helpful to extend this code to measure whether the route taken by the agent is direct or not. 
 
 ~~~~
 ///fold: makeHikeMDP, set up world
@@ -125,13 +190,15 @@ var startState = mdp.startState;
 var makeUtilityFunction = mdp.makeUtilityFunction;
 ///
 
-// Create parameterized agent
-var utility = makeUtilityFunction({
+var utilityTable = {
   East: 10,
   West: 1,
   Hill: -10,
   timeCost: -.1
-});
+}
+
+// Create parameterized agent
+var utility = makeUtilityFunction(utilityTable);
 var alpha = 1;  // <- SOFTMAX NOISE
 var agent = makeMDPAgent({ utility, alpha }, world);
 
