Readings for algorithms for inference, plus a little work on the chapter itself.

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -7,6 +7,61 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{vul2014one,
+  Title={One and done? Optimal decisions from very few samples},
+  Author={Vul, Edward and Goodman, Noah and Griffiths, Thomas L and Tenenbaum, Joshua B},
+  Journal={Cognitive science},
+  Volume={38},
+  Number={4},
+  Pages={599--637},
+  Year={2014},
+  Publisher={Wiley Online Library},
+  Url={https://cocosci.berkeley.edu/tom/papers/OneAndDone.pdf}
+}
+
+@inproceedings{gershman2009perceptual,
+  title={Perceptual multistability as Markov chain Monte Carlo inference},
+  author={Gershman, Samuel and Vul, Ed and Tenenbaum, Joshua B},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={611--619},
+  year={2009},
+  url={http://papers.nips.cc/paper/3711-perceptual-multistability-as-markov-chain-monte-carlo-inference.pdf}
+}
+
+@article{suchow2017evolution,
+  Title={Evolution in Mind: Evolutionary Dynamics, Cognitive Processes, and Bayesian Inference},
+  Author={Suchow, Jordan W and Bourgin, David D and Griffiths, Thomas L},
+  Journal={Trends in cognitive sciences},
+  Volume={21},
+  Number={7},
+  Pages={522--530},
+  Year={2017},
+  Publisher={Elsevier},
+  Url={http://suchow.io/assets/docs/suchow2017tics.pdf}
+}
+
+@article{andrieu2003introduction,
+  Title={An introduction to MCMC for machine learning},
+  Author={Andrieu, Christophe and De Freitas, Nando and Doucet, Arnaud and Jordan, Michael I},
+  Journal={Machine learning},
+  Volume={50},
+  Number={1-2},
+  Pages={5--43},
+  Year={2003},
+  Publisher={Springer},
+  Url={https://link.springer.com/content/pdf/10.1023%2FA%3A1020281327116.pdf}
+}
+
+@article{T.L.Griffiths:2008:dd194,
+author = {T. L. Griffiths and C. Kemp and J. B. Tenenbaum},
+journal = {Cambridge Handbook of Computational Cognitive Modeling},
+title = {Bayesian models of cognition},
+year = {2008},
+keywords = {chapter},
+doi = {},
+url = {http://cvcl.mit.edu/SUNSeminar/GriffithsKempTenenbaum2008.pdf}
+}
+
 @article{carlson:2013theory,
   Title={Theory of mind},
   Author={Carlson, Stephanie M and Koenig, Melissa A and Harms, Madeline B},
