inference-process now includes particle filter section

--- a/exercises/04.1-agents-as-programs.md
+++ b/exercises/04.1-agents-as-programs.md
@@ -74,8 +74,7 @@ People, it turns out, act very differently than the model above suggests. Respon
 ~~~~
 
 var responder = function(offer, alpha) {    
-	var alpha = 2
-   var p = Math.pow(offer/10,alpha)
+  var p = Math.pow(offer/10,alpha)
 	return(flip(p));
 }
 
@@ -155,7 +154,7 @@ How do the inferences of $$L_{2}$$ compare to those of $$L_{1}$$?
 
 ### c)
 
-Add a blue circle to the scenario. What happens to the interpretion of "blue"? Why? 
+Add a green circle to the scenario. What happens to the interpretion of "blue"? Why? 
 
 ### d) 
 
