--- a/readings/05.1-sequential-decisions.md
+++ b/readings/05.1-sequential-decisions.md
@@ -9,7 +9,7 @@ description: "MDPs and POMDPs"
 Read @Baker:2009ti, an early and influential example of using MDPs to model human reasoning about agents' intentions.
 
 #### Reading questions:
-a) We've seen models that do reasoning about an agent's goals before. What do POMDPs allow us to do that we couldn't do before?
+a) We've seen models that do reasoning about an agent's goals before. What do MDPs allow us to do that we couldn't do before?
 
 b) What are the key assumptions of this model that we are meant to learn something from? What are simplifications/hacks that aren't central and hopefully don't matter?
 
