Minor edits to readings for agents as programs. Added readings of observing sequences.

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -7,6 +7,62 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@inproceedings{kevselj2003n,
+  title={N-gram-based author profiles for authorship attribution},
+  author={Ke{\v{s}}elj, Vlado and Peng, Fuchun and Cercone, Nick and Thomas, Calvin},
+  booktitle={Proceedings of the conference pacific association for computational linguistics, PACLING},
+  volume={3},
+  pages={255--264},
+  year={2003},
+  Url={http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.87.754&rep=rep1&type=pdf}
+}
+
+@article{noveck2008experimental,
+  title={Experimental pragmatics: A Gricean turn in the study of language},
+  author={Noveck, Ira A and Reboul, Anne},
+  journal={Trends in Cognitive Sciences},
+  volume={12},
+  number={11},
+  pages={425--431},
+  year={2008},
+  publisher={Elsevier},
+  Url={http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.233.1679&rep=rep1&type=pdf}
+}
+
+@article{goodman2013knowledge,
+  title={Knowledge and implicature: Modeling language understanding as social cognition},
+  author={Goodman, Noah D and Stuhlm{\"u}ller, Andreas},
+  journal={Topics in cognitive science},
+  volume={5},
+  number={1},
+  pages={173--184},
+  year={2013},
+  publisher={Wiley Online Library},
+  Url={https://cloudfront.escholarship.org/dist/prd/content/qt24m3f2kk/qt24m3f2kk.pdf}
+}
+
+@inproceedings{schmidt2009tall,
+  title={How tall is tall? compositionality, statistics, and gradable adjectives},
+  author={Schmidt, Lauren A and Goodman, Noah D and Barner, David and Tenenbaum, Joshua B},
+  booktitle={Proceedings of the 31st annual conference of the cognitive science society},
+  pages={2759--2764},
+  year={2009},
+  organization={Citeseer},
+  Url={http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.440.2803&rep=rep1&type=pdf}
+}
+
+@article{lassiter2017adjectival,
+  title={Adjectival vagueness in a Bayesian model of interpretation},
+  author={Lassiter, Daniel and Goodman, Noah D},
+  journal={Synthese},
+  volume={194},
+  number={10},
+  pages={3801--3836},
+  year={2017},
+  publisher={Springer},
+  Url={https://cocolab.stanford.edu/papers/LassiterGoodman2015-Synthese.pdf}
+}
+
 @article{vul2014one,
   Title={One and done? Optimal decisions from very few samples},
   Author={Vul, Edward and Goodman, Noah and Griffiths, Thomas L and Tenenbaum, Joshua B},
