--- a/readings/04.1-agents-as-programs.md
+++ b/readings/04.1-agents-as-programs.md
@@ -24,11 +24,22 @@ One of the most well-studied pragmatic phenomena is scalar implicature, in which
 
 The first statement is awkward but not illogical. The second and third statements involve self-contradictions. 
 
-One of the first applications of RSA was to modeling scalar implicature. Read "[Knowledge and implicature: Modeling language understanding as social cognition](http://onlinelibrary.wiley.com/doi/10.1111/tops.12007/full)" by Noah Goodman and Andreaqs Stuhlmüller. 
+Read @goodman2013knowledge, which describes how the Rational Speech Act (RSA) model that we saw in the chapter can be applied to the phenomenon of [scalar implicature](https://en.wikipedia.org/wiki/Scalar_implicature).
 
-#### Reading questions
+#### Reading questions:
 
-a) Suppose we extendt the model so the speaker could say not just "some" and "all" but also "blue" or "green". Would saying "green" imply not "all"? Why or why not? 
+a) How does RSA implement traditional Gricean notions? In what ways does it differ? (If you aren't familiar with Grice, read below.)
+
+b) There are individual differences in how likely listeners are to infer scalar implicatures. How might this be implemented in the RSA model from the reading?
+
+## 3. Adjectives & Rational Speech Acts
+
+Start by reading @schmidt2009tall, which provides some background on the basic problem. Then read @lassiter2017adjectival to see how the Rational Speech Act model can be applied to this problem.
+
+#### Reading questions:
+a) How does the notion of 'informativity' help Lassiter and Goodman's model determine the meaning for gradable adjectives.
+
+b) Do you think Lassiter and Goodman's model should be understood as a processing model that explains how people interpret gradable adjectives in real time? Why or why not? 
 
 ## Extras
 
