Added readings for inference about inference

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -417,7 +417,9 @@ url = {http://cvcl.mit.edu/SUNSeminar/GriffithsKempTenenbaum2008.pdf}
 	Pages = {341--351},
 	Title = {Learning From Others: The Consequences of Psychological Reasoning for Human Learning},
 	Volume = {7},
-	Year = {2012}}
+	Year = {2012},
+	Url = {https://langcog.stanford.edu/papers/SGF-perspectives2012.pdf}
+	}
 
 @article{Baker:2009ti,
 	Author = {Baker, Chris L and Saxe, Rebecca and Tenenbaum, Joshua B},
