Added reading for hierarchical models

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -7,6 +7,18 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{perfors2010variability,
+  title={Variability, negative evidence, and the acquisition of verb argument constructions},
+  author={Perfors, Amy and Tenenbaum, Joshua B and Wonnacott, Elizabeth},
+  journal={Journal of child language},
+  volume={37},
+  number={3},
+  pages={607--642},
+  year={2010},
+  publisher={Cambridge University Press},
+  Url={https://www.cambridge.org/core/journals/journal-of-child-language/article/variability-negative-evidence-and-the-acquisition-of-verb-argument-constructions/D62EDBFF5A8F1ACC821451FEAD3C88FB}
+}
+
 @inproceedings{kevselj2003n,
   title={N-gram-based author profiles for authorship attribution},
   author={Ke{\v{s}}elj, Vlado and Peng, Fuchun and Cercone, Nick and Thomas, Calvin},
