Fixed a reference. Elaborated on examples in second part of chapter.

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -7,6 +7,18 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{cheng1997covariation,
+  title={From covariation to causation: a causal power theory.},
+  author={Cheng, Patricia W},
+  journal={Psychological review},
+  volume={104},
+  number={2},
+  pages={367},
+  year={1997},
+  publisher={American Psychological Association},
+  Url={https://pdfs.semanticscholar.org/ac40/c59cc950959978c42fb0618b1458a93975a3.pdf}
+}
+
 @article{perfors2010variability,
   title={Variability, negative evidence, and the acquisition of verb argument constructions},
   author={Perfors, Amy and Tenenbaum, Joshua B and Wonnacott, Elizabeth},
