Added readings for learning-as-inference

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -7,6 +7,18 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{piantadosi2012bootstrapping,
+  title={Bootstrapping in a language of thought: A formal model of numerical concept learning},
+  author={Piantadosi, Steven T and Tenenbaum, Joshua B and Goodman, Noah D},
+  journal={Cognition},
+  volume={123},
+  number={2},
+  pages={199--217},
+  year={2012},
+  publisher={Elsevier},
+  Url={https://colala.bcs.rochester.edu/papers/piantadosi2012bootstrapping.pdf}
+}
+
 @article{cheng1997covariation,
   title={From covariation to causation: a causal power theory.},
   author={Cheng, Patricia W},
