Updated attributions for two of the chapters

--- a/readings/04.1-agents-as-programs.md
+++ b/readings/04.1-agents-as-programs.md
@@ -41,6 +41,15 @@ a) How does the notion of 'informativity' help Lassiter and Goodman's model dete
 
 b) Do you think Lassiter and Goodman's model should be understood as a processing model that explains how people interpret gradable adjectives in real time? Why or why not? 
 
+## 4. Generics & Rationa Speech Acts
+
+Read [this chapter](http://www.problang.org/chapters/07-generics.html) from another WebPPL textbook that covers how Tessler & Goodman apply a model similar to the one in (3) to handle generics.
+
+#### Reading questions:
+a) How does the notion of 'informativity' help the model determine a meaning for generics?
+
+b) How does this model reinterpret the relationship between what a sentence "literally" means, and what it implies?
+
 ## Extras
 
 * **Gricean Theory**. The wikipedia article on the [Cooperative Principle](https://en.wikipedia.org/wiki/Cooperative_principle) provides an excellent overview of Gricean Theory. "[Experimental pragmatics: A Gricean turn in the study of language](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.233.1679&rep=rep1&type=pdf)" by Ira Noveck and Anne Reboul provides a very accessible discussion of psychological research up through 2008.
