fixed link to Piantadosi, error in hierarchical models exercises. Added answer keys.

--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -16,7 +16,7 @@
   pages={199--217},
   year={2012},
   publisher={Elsevier},
-  Url={https://colala.bcs.rochester.edu/papers/piantadosi2012bootstrapping.pdf}
+  Url={http://old.nbu.bg/cogs/events/5_4_D_piantadosi2012bootstrapping.pdf}
 }
 
 @article{cheng1997covariation,
