--- a/assets/bibliography.bib
+++ b/assets/bibliography.bib
@@ -317,9 +317,9 @@ url = {http://cvcl.mit.edu/SUNSeminar/GriffithsKempTenenbaum2008.pdf}
 	Author = {Hamrick, Jessica and Battaglia, Peter and Tenenbaum, Joshua B},
 	Booktitle = {Proceedings of the 33rd Annual Meeting of the Cognitive Science Society, Boston, MA},
 	Title = {Internal physics models guide probabilistic judgments about object dynamics},
-	Url = {http://web.mit.edu/pbatt/www/publications/HamrBattTene11CogSci33.pdf},
+	Url = {https://cogsci.mindmodeling.org/2011/papers/0350/paper0350.pdf},
 	Year = {2011},
-	Bdsk-Url-1 = {http://web.mit.edu/pbatt/www/publications/HamrBattTene11CogSci33.pdf}}
+	Bdsk-Url-1 = {https://cogsci.mindmodeling.org/2011/papers/0350/paper0350.pdf}}
 
 @inproceedings{Gerstenberg2012,
 	Author = {Gerstenberg, Tobias and Goodman, Noah D},
